COUP-625: update version numbers in documentation

--- a/generated-docs/index.html
+++ b/generated-docs/index.html
@@ -549,7 +549,7 @@ table.CodeRay td.code>pre{padding:0}
 <p>Java &gt;= <code>1.8</code></p>
 </li>
 <li>
-<p>Spring Boot &gt;= {java.version}</p>
+<p>Spring Boot &gt;= <code>2.0.3.RELEASE</code></p>
 </li>
 </ul>
 </div>
@@ -559,7 +559,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="ulist">
 <ul>
 <li>
-<p>Spring Boot Actuator = <code>{spring-boot-version}</code></p>
+<p>Spring Boot Actuator = <code>2.0.3.RELEASE</code></p>
 </li>
 </ul>
 </div>
@@ -579,7 +579,7 @@ table.CodeRay td.code>pre{padding:0}
 </div>
 </div>
 <div class="paragraph">
-<p>The starter contains all required dependencies, including <code>spring-boot-starter-actuator v{spring-boot-version}</code>.</p>
+<p>The starter contains all required dependencies, including <code>spring-boot-starter-actuator v2.0.3.RELEASE</code>.</p>
 </div>
 </div>
 </div>
@@ -635,7 +635,7 @@ table.CodeRay td.code>pre{padding:0}
 <div id="footer">
 <div id="footer-text">
 Version 1.0.0-SNAPSHOT<br>
-Last updated 2018-07-30 16:41:55 MESZ
+Last updated 2018-07-31 09:00:35 MESZ
 </div>
 </div>
 </body>
